Fixed notification overflow

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -2,7 +2,8 @@
 
 .border {
   border-radius: 0.5rem;
-    border: 0.1rem solid #ebe9f1;
+  border: 0.1rem solid #ebe9f1;
+  overflow: scroll;
 }
 
 .home {
