--- a/src/app/widgets/notifications/notifications.component.scss
+++ b/src/app/widgets/notifications/notifications.component.scss
@@ -88,12 +88,14 @@
             &__notification{
                 width: 70%;
                 margin-left: 2rem;
+                overflow: scroll;
+                
                 &__chooser{
                     width: 100%;
                     height: 100%;
-                    overflow-y: scroll;
+                    overflow: scroll;
                     display: flex;
-                    flex-wrap: wrap;
+
                     &-buttons{
                         width: 50%;
                         &-single{
